--- a/views/generar_boleto.html
+++ b/views/generar_boleto.html
@@ -8,9 +8,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script defer src="reserva.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+    <script defer src="../js/reserva.js"></script>
   </head>
 
   <body class="bg-light">
@@ -75,6 +77,8 @@
       <div id="loaderConfirmacion" class="alert alert-info mt-3 d-none">
         ⏳ Esperando confirmación del boleto...
       </div>
+
+      <div id="mensajeBus" class="alert alert-warning text-center mt-3 d-none"></div>
 
       <div class="mt-3" id="asientos">
         <label for="asientoSelect" class="form-label"
